--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Biglietto treno</title>
 </head>
 <body>
+    
+    <h1 id="text_output"></h1>
 
-    <h1 id="content"></h1>
+    <h1 id="text_output2"></h1>
 
     <script src="js/script.js"></script>
 </body>
