Continauzione dell'esercizio

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Biglietto treno</title>
 </head>
 <body>
-    
+
     <h1 id="text_output"></h1>
 
     <h1 id="text_output2"></h1>
+
+    <!-- JAVASCRIPT -->
 
     <script src="js/script.js"></script>
 </body>
